fix navbar alignment
center nav-list
add gap between li's
nav-list span 2 grid columns in mobile layout
add margin to navbar
move nav-list to right in desktop layout

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ header {
     grid-template-columns: 1fr 1fr;
     /* grid-template-rows: 1fr 1fr; */
     /* justify-items:  space-between; */
+    margin: 10px;
   }
   .logo {
 text-decoration: none;
@@ -53,18 +54,18 @@ grid-column: 1/2;
     display: none;
     flex-direction: column;
     /* align-items: flex-end; */
-    justify-self: end;
+    justify-self: center;
     grid-row: 2/3;
-    /* grid-column: 1/3; */
+    grid-column: 1/3;
+    gap: 10px;
 }
 .nav-list li:first-child {
     margin-top: 0;
-  }
+  } 
 .nav-list a {
   display: block;
     text-decoration: none;
     text-align: center;
-    /* padding: 0.4em; */
 }
 .nav-list a:visited {
 color: black;
@@ -150,6 +151,7 @@ justify-content: space-between;
         /* display: flex;  */
         grid-row: 1/2;
         flex-direction: row;
+        justify-self: end;
       }
     /* #navbar {
         display: block;
